# isa_project

./: .gitignore  Board.cpp  Board.h  CMakeLists.txt  Dashboard.cpp  Dashboard.h  Handler.cpp  Handler.h  Post.cpp  Post.h  README.md  Request.cpp  Request.h  Response.cpp  Response.h  client.cpp  main.cpp  note.md  readme.md  server.cpp
docs/: docs.tex
src/: Board.h  Dashboard.cpp  Handler.h  Post.cpp  Request.cpp  Request.h  Response.cpp  client.cpp  server.cpp
